# Indie-Bomberman

./: CMakeLists.txt  Install.sh  Setup.bat  Uninstall.sh  Unsetup.bat  indie  warning.sh
Media/Audio/: MenuMusic.ogg.reapeaks
Media/Images/: DarkFilterPopUp.xcf  LoadGameButtonPressed.xcf  RightArrow.xcf
Media/Mesh/: Ice.3ds  IceBomb.b3d  OilPoodle.3ds  PowerUps.b3d  TMPBlock.3ds  TMPBlock2.3ds  TMPMiniBlock.3ds  bomb.3ds  bomb.b3d
Media/Mesh/CountrySide/: GroundGrass.3ds  TileCountryBreakable.3ds  UnbreakableCountry.b3d
Media/Mesh/Desert/: Exterior.3ds  Ground.3ds  Unbreakable.3ds
Media/Mesh/Icelands/: Breakable.3ds  Exterior.3ds
Media/Mesh/Magma/: Stories.3ds  Unbreakable.3ds  UnbreakableBorder.3ds
Media/Mesh/PlayersTextures/PlayerDarker/: PlayerTwo.b3d
Media/Mesh/PlayersTextures/PlayerYellow/: PlayerFour.b3d
PreCompiled/Media/Images/: ActionIcon.xcf  HumanButton.xcf  MinusButtonPressed.xcf  PlayButton.xcf  TextButtonPressed.xcf
PreCompiled/Media/Images/Untitled Folder/: toto.tar
PreCompiled/Media/Mesh/: FallBlock.b3d  Magnet.3ds  OilBomb.b3d  RoundedCornerTile.3ds  TMPPlayer.3ds
PreCompiled/Media/Mesh/CountrySide/: TileCountryBreakableStraw.3ds  TileCountryBrick.3ds  UnbreakableCountry.3ds
PreCompiled/Media/Mesh/Desert/: Breakable.3ds  Stories.3ds
PreCompiled/Media/Mesh/Icelands/: Ground.3ds  Stories.3ds  Unbreakable.3ds
PreCompiled/Media/Mesh/Magma/: Breakable.3ds  Ground.3ds
PreCompiled/Media/Mesh/PlayersTextures/PlayerBasic/: PlayerOne.b3d
PreCompiled/Media/Mesh/PlayersTextures/PlayerGreen/: PlayerThree.b3d
PreCompiled/Media/Mesh/SplashScreen/: SplashScreen.3ds
PreCompiled/Misc/: LeaderBoard.conf  SoundSets.conf
PreCompiled/linux/: Install.sh  Uninstall.sh
PreCompiled/linux/winInc/: libboost_serialization.so.1.63.0  libpng16.so.16  libsfml-system.so.2.4.2
PreCompiled/windows/: Setup.bat
src/: AEffect.cpp  AEffect.hpp  AEntity.cpp  AEntity.hpp  APlayer.cpp  APlayer.hpp  Binds.hpp  BombEntity.cpp  BombEntity.hpp  BreakableEntity.hpp  CGUITTFont.cpp  CGUITTFont.h  Camera.cpp  Camera.hpp  CheckFiles.cpp  Core.cpp  Core.hpp  Directory.cpp  Directory.hpp  DisplayEngine.cpp  DisplayEngine.hpp  ErrorMessage.cpp  ErrorMessage.hpp  FallEntity.cpp  FallEntity.hpp  FileChecker.cpp  FileChecker.hpp  FlameEffect.hpp  FlameEntity.cpp  FlameEntity.hpp  FrozenBombEntity.cpp  FrozenBombEntity.hpp  GameOver.cpp  GameOver.hpp  GrassEntity.hpp  HashType.hpp  HudSet.cpp  HudSet.hpp  IA_Scan.cpp  IScreen.hpp  (+72 more)
tmpX/: libfreetype.so.6
winInc/: legacy_stdio_definitions.lib  libsfml-audio.so.2.4
winInc/boost/serialization/: throw_exception.hpp
winInc/freetype/config/: ftoption.h
winInc/irrlicht/: irrUString.h  irrlicht.h
